--- a/unibot_project/unibot_frontend/package.json
+++ b/unibot_project/unibot_frontend/package.json
@@ -16,7 +16,7 @@
     "react-dom": "18.3.1",
     "react-i18next": "^16.0.0",
     "react-router-dom": "6.26.2",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -47,6 +47,10 @@
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.18"
+  },
+  "engines": {
+    "node": "18.x",
+    "npm": "8.x"
   },
   "overrides": {}
 }
