--- a/unibot_project/unibot_frontend/package.json
+++ b/unibot_project/unibot_frontend/package.json
@@ -49,8 +49,11 @@
     "tailwindcss": "^3.4.18"
   },
   "engines": {
-    "node": "18.x",
-    "npm": "8.x"
+    "node": "20.x",
+    "npm": "10.x"
+  },
+  "resolutions": {
+    "typescript": "4.9.5"
   },
   "overrides": {}
 }
