--- a/unibot_project/unibot_frontend/package.json
+++ b/unibot_project/unibot_frontend/package.json
@@ -20,7 +20,6 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "preinstall": "npm install typescript@4.9.5 --save-exact",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -49,9 +48,14 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.18"
   },
+  "overrides": {
+    "typescript": "4.9.5"
+  },
   "engines": {
     "node": "20.x",
     "npm": "10.x"
   },
-  "overrides": {}
+  "resolutions": {
+    "typescript": "4.9.5"
+  }
 }
