--- a/unibot_project/unibot_backend/requirements_full.txt
+++ b/unibot_project/unibot_backend/requirements_full.txt
@@ -1,44 +1,21 @@
 annotated-types==0.7.0
 anyio==4.11.0
 asgiref==3.10.0
-black==24.4.2
-certifi==2025.10.5
-charset-normalizer==3.4.4
-click==8.3.0
-distro==1.9.0
 Django==4.2.7
 django-cors-headers==4.3.1
 django-jazzmin==3.0.1
 djangorestframework==3.14.0
 djangorestframework_simplejwt==5.5.1
-flake8==7.1.0
 groq==0.4.2
 gunicorn==23.0.0
-h11==0.16.0
-httpcore==1.0.9
 httpx==0.27.0
 idna==3.11
-mccabe==0.7.0
-mypy_extensions==1.1.0
-packaging==25.0
-pathspec==0.12.1
-platformdirs==4.5.0
-pycodestyle==2.12.1
-pydantic==2.12.3
-pydantic_core==2.41.4
-pyflakes==3.2.0
 PyJWT==2.10.1
 PyPDF2==3.0.1
 python-dotenv==1.0.1
-pytz==2025.2
 requests==2.32.3
-sniffio==1.3.1
 sqlparse==0.5.3
-typing-inspection==0.4.2
 typing_extensions==4.15.0
 tzdata==2025.2
-urllib3==2.5.0
-uuid==1.30
-gunicorn>=21.2.0
 whitenoise==6.7.0
-Pillow
+Pillow>=10.0
