--- a/unibot_project/unibot_backend/requirements_full.txt
+++ b/unibot_project/unibot_backend/requirements_full.txt
@@ -5,7 +5,7 @@ Django==4.2.7
 django-cors-headers==4.3.1
 djangorestframework==3.14.0
 djangorestframework_simplejwt==5.5.1
-google-genai
+google-generativeai>=0.7.0
 gunicorn==23.0.0
 httpx==0.27.0
 idna==3.11
